--- a/webapp/client/source/app/home/home.jade
+++ b/webapp/client/source/app/home/home.jade
@@ -1,6 +1,6 @@
 .home-view
     .card.bgc-blue-800.text-center.tc-white(class="p+++")
-        h2.title Webapp
+        h2.title Baby Baby!
         h3.subtitle
-            | Awesome web app built on AngularJS &amp; Material Design.
-        a.btn.btn--green.btn--l.btn--raised(class="mt+", ui-sref="root.login", lx-ripple="white") Get Started
+            | Keeping Your Little Loved Ones Save.
+        a.btn.btn--green.btn--l.btn--raised(class="mt+", ui-sref="root.dashboard", lx-ripple="white") Dashboard
