--- a/webapp/client/source/app/layout/header.jade
+++ b/webapp/client/source/app/layout/header.jade
@@ -6,18 +6,16 @@
                     i.mdi.mdi-menu
                 img.logo(src="static/images/layout/logo.png")
             .toolbar__label.fs-title.header-title
-                a.tc-white(ui-sref="root.home") Webapp
+                a.tc-white(ui-sref="root.home") Baby Baby!
             .toolbar__right
-                a.btn.btn--l.btn--white.btn--icon.header-login(ui-sref="root.login", lx-ripple="white", ng-if="!vm.isLoggedIn")
-                    i.mdi.mdi-login
-                span.header-user-name.hide-sm(ng-if="vm.isLoggedIn") {{vm.userInfo.name}}
-                lx-dropdown.header-dropdown(position="right", from-top, ng-if="vm.isLoggedIn")
+                span.header-user-name.hide-sm Papa
+                lx-dropdown.header-dropdown(position="right", from-top)
                     button.btn.btn--xl.btn--white.btn--icon.dropdown-toggle(lx-ripple, lx-dropdown-toggle)
                         i.mdi.mdi-dots-vertical
                     lx-dropdown-menu
                         ul.header-dropdown-menu
-                            li.hide-gt-sm.text-center.tc-grey-500(ng-if="vm.isLoggedIn")
-                                span {{vm.userInfo.name}}
+                            li.hide-gt-sm.text-center.tc-grey-500
+                                span Papa
                             li.hide-gt-sm.dropdown-divider
                             li
                                 a.dropdown-link.logout-link(ui-sref="root.login({action: 'logout'})")
