--- a/webapp/client/source/app/dashboard/dashboard.jade
+++ b/webapp/client/source/app/dashboard/dashboard.jade
@@ -2,7 +2,7 @@
     .card.bgc-blue-100(class="p+")
         p Welcome Papa!
     .boxes
-        a.box.tc-white(ng-repeat="msg in ::vm.messages",
+        a.box.tc-white(ng-repeat="msg in messages",
             class="{{::vm.colors[$index % vm.colors.length]}}"
             )
             i.icon.icon--xl.icon--flat.mdi.mdi-cellphone-android
