Working working, baby baby
Signed-off-by: Thorben Fohlmeister <thorben@fohlmeister.com>

--- a/webapp/client/source/app/device/device.jade
+++ b/webapp/client/source/app/device/device.jade
@@ -3,8 +3,8 @@
         p(ng-show="::vm.devices.length") 1 device connected
         p(ng-hide="::vm.devices.length") No devices connected
 
-    .card(ng-repeat="device in devices")
+    .card(ng-repeat="device in vm.devices")
         i.icon.icon--xl.icon--flat.mdi.mdi-tablet-ios
-        p.name {{::device.model}}
-        p.name {{::device.id}}
-        p.name {{::device.timestamp}}
+        p.name {{device.model}}
+        p.name {{device.id}}
+        p.name {{device.timestamp}}
