--- a/webapp/client/source/app/layout/header.jade
+++ b/webapp/client/source/app/layout/header.jade
@@ -8,14 +8,14 @@
             .toolbar__label.fs-title.header-title
                 a.tc-white(ui-sref="root.home") Baby Baby!
             .toolbar__right
-                span.header-user-name.hide-sm Papa
+                span.header-user-name.hide-sm Dad
                 lx-dropdown.header-dropdown(position="right", from-top)
                     button.btn.btn--xl.btn--white.btn--icon.dropdown-toggle(lx-ripple, lx-dropdown-toggle)
                         i.mdi.mdi-dots-vertical
                     lx-dropdown-menu
                         ul.header-dropdown-menu
                             li.hide-gt-sm.text-center.tc-grey-500
-                                span Papa
+                                span Dad
                             li.hide-gt-sm.dropdown-divider
                             li
                                 a.dropdown-link.logout-link(ui-sref="root.login({action: 'logout'})")
