--- a/webapp/client/source/app/dashboard/dashboard.jade
+++ b/webapp/client/source/app/dashboard/dashboard.jade
@@ -1,8 +1,8 @@
 .dashboard-view.full-width
     .card.bgc-blue-100(class="p+")
-        p Welcome Papa!
+        p Welcome Dad!
     .boxes
-        a.box.tc-white(ng-repeat="msg in messages",
+        a.box.tc-white(ng-repeat="msg in vm.messages",
             class="{{::vm.colors[$index % vm.colors.length]}}"
             )
             i.icon.icon--xl.icon--flat.mdi.mdi-cellphone-android
